Try fix button z-index

--- a/style.css
+++ b/style.css
@@ -184,4 +184,5 @@ body {
 #btn-init-container{
     position: absolute;
     bottom: 10px;
+    z-index: 1;
 }
